fix: fix calendar title z-index

--- a/src/scss/modules/calendar.scss
+++ b/src/scss/modules/calendar.scss
@@ -11,7 +11,6 @@
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
-    z-index: 90;
   }
   &__flex-container {
     display: flex;
